# TaKe

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
handouts/: homework1.tex
src/: bvh.cpp  bvh.h  camera.h  compute_normals.h  distribution.cpp  distribution.h  hw1.cpp  hw1_scenes.h  hw2.cpp  hw2_utility.h  hw3.cpp  hw3_utility.h  hw4.cpp  image.cpp  intersection.h  light.cpp  light.h  main.cpp  material.cpp  material.h  matrix.h  parse_scene.cpp  parse_scene.h  render.cpp  render.h  scene.cpp  scene.h  shape.cpp  shape.h  take.h  texture.cpp  texture.h  timer.h  torrey.h  transform.cpp  transform.h  vector.h
src/integrator/: path_tracing.h
src/lights/: area_light.inl  envmap.inl  point_light.inl
src/materials/: blinn_phong.inl  blinn_phong_microfacet.inl  diffuse.inl  disney_bsdf.inl  disney_clearcoat.inl  disney_diffuse.inl  disney_glass.inl  disney_metal.inl  disney_sheen.inl  mirror.inl  phong.inl  plastic.inl
src/parse/: parse_obj.cpp  parse_obj.h  parse_ply.cpp  parse_ply.h  parse_scene.cpp  parse_scene.h  parse_serialized.cpp  parse_serialized.h
src/utils/: print_scene.cpp  print_scene.h  progressreporter.h
